   - Feature: gnubiff-devel address in credits dialog
   - Bugfix: Detection of FAM/GAMIN in configure (thanks to Jan Blunck for
        providing a patch)
   - Added Jan Blunck to contributors
   - Updated German translation
   - Feature: Ability to switch off FAM monitoring in favor of polling (option
        "mailbox/file_fam_enable")
 * Roland Stigge
   - Added reference to info pages in man page (Debian bug #335193)

Version 2.1.9
 * Robert Sowada
   - Changed version to 2.1.9
   - Backport (from gnubiff 2.2.0 CVS) of properties line in expert dialog fix
   - Backport (from gnubiff 2.2.0 CVS) of a.v. line in expert dialog fix
   - Backport (from gnubiff 2.2.0 CVS) of compiler warning bugfix
   - Bugfix: Detection of FAM/GAMIN in configure (thanks to Jan Blunck for
        providing a patch)
   - Added Jan Blunck to contributors
	
Version 2.1.8		2005-12-19 22:01
 * Robert Sowada
   - Changed version to 2.1.8
   - Backport (from gnubiff 2.2.0 CVS) of smaller fixes
   - Backport (from gnubiff 2.2.0 CVS) of newer version in config file fix
   - Updated Italian translation (thanks to Stefano Fabri)
   - Feature: Hungarian translation (thanks to Wallner Adam)
   - Added Wallner Adam to translators and contributors
   - Updated TODO
   - Bugfix: Added an include to src/support.cc (for FreeBSD 4)

Version 2.1.7		2005-10-31  0:43
 * Robert Sowada
   - Changed version to 2.1.7
   - Bugfix: Mistake when backporting from 2.2.0 to 2.1.6. Thanks to Maik
        Wachsmuth and Satou Kazuhito for reporting this bug.
   - Added Maik Wachsmuth and Satou Kazuhito to contributors
 * Roland Stigge
   - Added reference to info page in man page (Debian bug #335193)
    
Version 2.1.6		2005-10-09 15:51
 * Robert Sowada
   - Changed version to 2.1.6
   - Backport (from gnubiff 2.2.0 CVS) of changes for installing gnubiff into
        an arbitrary location

Version 2.1.5		2005-08-21 18:11
 * Robert Sowada
   - Changed version to 2.1.5